# llm-self-critique

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/src/: __init__.py  database.py  main.py
backend/src/api/: __init__.py  analytics.py  api_keys.py  chat.py  chat_ws.py  domains.py  planning.py  validation.py  websocket.py
backend/src/critique/: __init__.py  orchestrator.py  parser.py  voting.py
backend/src/elicitation/: __init__.py  chat_handler.py  completeness.py  pddl_generator.py  state_machine.py
backend/src/llm/: __init__.py  base.py  router.py
backend/src/middleware/: __init__.py  rate_limiting.py  usage_tracking.py
backend/src/models/: __init__.py  analytics.py  chat_session.py  domain.py  planning.py  planning_session.py  user.py  workspace.py
backend/src/pddl/: __init__.py  parser.py  validator.py
backend/src/schemas/: __init__.py  domain.py  planning.py
backend/src/websocket/: __init__.py  manager.py  notifications.py
backend/tests/api/: test_analytics.py  test_api_keys.py  test_chat.py  test_domains.py  test_planning.py  test_validation.py  test_websocket.py
backend/tests/critique/: test_orchestrator.py  test_parser.py  test_voting.py
backend/tests/elicitation/: test_completeness.py  test_pddl_generator.py  test_state_machine.py
backend/tests/llm/: test_base.py  test_claude_adapter.py  test_openai_adapter.py  test_router.py
backend/tests/middleware/: test_rate_limiting.py  test_usage_tracking.py
backend/tests/pddl/: test_parser.py  test_validator.py
backend/tests/websocket/: test_manager.py  (+1 more)
(+49 files in other folders)
